// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`show display in progres when movie is been fetching 1`] = `
<div>
  Loading...
</div>
`;

exports[`show error when movie fetch has failed 1`] = `
<div>
  Error...
</div>
`;

exports[`show movie list when fetching movies 1`] = `
<div
  className="movie-list-container"
>
  <div
    className="movie-item"
  >
    <img
      alt="Kabali"
      className="movie-thumbnail"
      src="https://img.spicinemas.in/resources/images/movies/Kabali/150x207.jpg"
    />
    <h5
      className="name"
    >
      Kabali
    </h5>
    <p
      className="experiences"
    >
      RDX, Dolby Atmos, SUB
    </p>
  </div>
  <div
    className="movie-item"
  >
    <img
      alt="Sultan"
      className="movie-thumbnail"
      src="https://img.spicinemas.in/resources/images/movies/Sultan/150x207.jpg"
    />
    <h5
      className="name"
    >
      Sultan
    </h5>
    <p
      className="experiences"
    >
      RDX, Dolby Atmos, SUB
    </p>
  </div>
  <div
    className="movie-item"
  >
    <img
      alt="Banjo"
      className="movie-thumbnail"
      src="https://img.spicinemas.in/resources/images/movies/undefined/150x207.jpg"
    />
    <h5
      className="name"
    >
      Banjo
    </h5>
    <p
      className="experiences"
    >
      RDX 3D
    </p>
  </div>
  <div
    className="movie-item"
  >
    <img
      alt="Suicide Squad"
      className="movie-thumbnail"
      src="https://img.spicinemas.in/resources/images/movies/Suicide-Squad/150x207.jpg"
    />
    <h5
      className="name"
    >
      Suicide Squad
    </h5>
    <p
      className="experiences"
    >
      Dolby Atmos, RDX 3D, SUB
    </p>
  </div>
  <div
    className="movie-item"
  >
    <img
      alt="Namadhu"
      className="movie-thumbnail"
      src="https://img.spicinemas.in/resources/images/movies/Namadhu/150x207.jpg"
    />
    <h5
      className="name"
    >
      Namadhu
    </h5>
    <p
      className="experiences"
    >
      RDX, SUB
    </p>
  </div>
  <div
    className="movie-item"
  >
    <img
      alt="Pelli Chupulu"
      className="movie-thumbnail"
      src="https://img.spicinemas.in/resources/images/movies/Pelli0-Chupulu/150x207.jpg"
    />
    <h5
      className="name"
    >
      Pelli Chupulu
    </h5>
    <p
      className="experiences"
    >
      RDX, SUB
    </p>
  </div>
  <div
    className="movie-item"
  >
    <img
      alt="Pink"
      className="movie-thumbnail"
      src="https://img.spicinemas.in/resources/images/movies/Pink/150x207.jpg"
    />
    <h5
      className="name"
    >
      Pink
    </h5>
    <p
      className="experiences"
    >
      RDX, SUB
    </p>
  </div>
  <div
    className="movie-item"
  >
    <img
      alt="Remo"
      className="movie-thumbnail"
      src="https://img.spicinemas.in/resources/images/movies/Remo/150x207.jpg"
    />
    <h5
      className="name"
    >
      Remo
    </h5>
    <p
      className="experiences"
    >
      Dolby Atmos, RDX, SUB
    </p>
  </div>
  <div
    className="movie-item"
  >
    <img
      alt="Inferno"
      className="movie-thumbnail"
      src="https://img.spicinemas.in/resources/images/movies/Inferno/150x207.jpg"
    />
    <h5
      className="name"
    >
      Inferno
    </h5>
    <p
      className="experiences"
    >
      Dolby Atmos, RDX, SUB
    </p>
  </div>
</div>
`;
